# layout_engine

./: README.md
lab/libevent/: a.out  main  main.cc
lab/web_office/: app.js  index.html
lab/websocket/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  index.html  main.cc  server.cc  server.h  webserver
src/: CMakeLists.txt  render_text.cc  render_text.h  test.cc  web_client.cc  web_server.cc
src/controller/: block_selection_controller.cc  block_selection_controller.h  caret_controller.cc  caret_controller.h  controller.h  enter_char_controller.cc  enter_char_controller.h  paragraph_controller.cc  paragraph_controller.h
src/controller/command/: char_command_delegate.h  command.h  command_stack.cc  command_stack.h  commit.cc  commit.h  commit_tree.cc  commit_tree.h  del_char_delegate.cc  del_char_delegate.h  delete_char_command.cc  delete_char_command.h  delete_text_command.cc  delete_text_command.h  initial_command.cc  initial_command.h  ins_char_delegate.cc  ins_char_delegate.h  insert_char_command.cc  insert_char_command.h  set_prop_command.h  set_selection_command.cc  set_selection_command.h  split_run_command.cc  split_run_command.h
src/controller/command/run_prop/: set_run_prop_command.h
src/controller/event/: event.cc  event.h  key_event.cc  key_event.h  keyboard_codes.h  mouse_event.cc  mouse_event.h
src/graphic/: bitmap.cc  bitmap.h  bitmap_canvas.cc  bitmap_canvas.h  canvas.cc  canvas.h  color.h  matrix.cc  matrix.h  paint.cc  paint.h  point.cc  point.h  svg_canvas.cc  svg_canvas.h
src/model/: Selection.cc  block_container.h  character.cc  character.h  document.cc  document.h  enter_run.cc  enter_run.h  glyph.h  paragraph.cc  paragraph.h  run.cc  run.h  selection.h  text_run.cc  text_run.h  word.cc  word.h
src/model/character/: basic_character.cc  basic_character.h  character.cc  character.h  enter_character.cc  enter_character.h  space_character.cc  space_character.h
src/model/face/: face.cc  face.h  face_manager.cc  face_manager.h
src/model/glyph/: glyph.cc  glyph.h  span.cc  span.h
src/model/prop/: font.cc  font.h  paragraph_prop.cc  paragraph_prop.h  run_prop.cc  run_prop.h  section_prop.cc  section_prop.h  underline.cc  underline.h
src/model/prop/underline/: single_underline.cc  single_underline.h  underline.h
src/model/selection/: block_selection.cc  block_selection.h  caret_selection.cc  caret_selection.h  selection.h  selection_util.cc  selection_util.h
src/type/: child.h  container.h  linked_object.h  tree_node.h
src/util/: conv_util.h
src/view/: character_view.cc  character_view.h  document_view.cc  document_view.h  hititem.cc  hititem.h  layer.cc  layer.h  line_view.cc  line_view.h  normal_word_view_delegate.cc  normal_word_view_delegate.h  paragraph_view.cc  paragraph_view.h  run_view.h  space_character_view.cc  space_character_view.h  splitted_word_view_delegate.cc  splitted_word_view_delegate.h  view.cc  view.h  word_view.cc  word_view.h  word_view_delegate.h
src/view/character/: character_view.cc  character_view.h  enter_character_view.cc  enter_character_view.h  space_character_view.cc  space_character_view.h
src/view/linebreaker/: linebreaker.h  word_linebreaker.cc  word_linebreaker.h
src/view/page/: column_view.cc  column_view.h  page_view.cc  page_view.h
src/view/run/: run_view.cc  run_view.h
src/view/selection/: block_selection_view.cc  block_selection_view.h  caret_selection_view.cc  caret_selection_view.h
src/web/: CMakeLists.txt  event_processor.cc  event_processor.h  index.html  main.cc  myscript.js  painter.cc  painter.h  server.cc  server.h  session.cc  session.h
src/web/html/: index.html
